Added plant button bleh 😒

--- a/app/src/main/res/layout/activity_apple.xml
+++ b/app/src/main/res/layout/activity_apple.xml
@@ -22,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="APPLE BRAEBURN"
+        android:textColor="#f2670a"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgApple"
@@ -33,7 +34,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="This New Zealand apple is now one the world’s top commercial selections. It has delicious, crisp, juicy flesh and superb sweet-tart flavour with a noticeably aromatic aftertaste. Excellent keeper. "
+        android:text="This New Zealand apple is now one the world’s top commercial selections. It has delicious, crisp, juicy flesh and superb sweet-tart flavour with a noticeably aromatic aftertaste. Excellent keeper."
+        android:textColor="#c2601f"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lblTitle"
