--- a/app/src/main/res/layout/activity_plant.xml
+++ b/app/src/main/res/layout/activity_plant.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PlantActivity"
+    android:background="@drawable/plantc"
     android:padding="20sp"
-    android:background="@drawable/plantc">
+    tools:context=".PlantActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="20dp" >
+        tools:layout_editor_absoluteX="20dp">
 
         <Button
             android:id="@+id/btnplant1"
